Fixed the ministry report dropdown overflow issue

--- a/sources/packages/web/src/assets/css/base.scss
+++ b/sources/packages/web/src/assets/css/base.scss
@@ -362,6 +362,10 @@ strong {
   border: 1px solid $common-border-color;
 }
 
+.v-card.overflow {
+  overflow: visible;
+}
+
 .content-group-info {
   background-color: $default-background;
   border: 2px solid $common-border-color !important;
